--- a/Medusa.Analyze1553B.UI/App.xaml
+++ b/Medusa.Analyze1553B.UI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Medusa.Analyze1553B.UI.App"
+﻿<Application x:Class="Program.ByteSumCountingProgram.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Medusa.Analyze1553B.UI"
+             xmlns:local="clr-namespace:Program.ByteSumCountingProgram.UI"
              >
     <Application.Resources>
 
