--- a/Medusa.Analyze1553B.UI/MainWindow.xaml
+++ b/Medusa.Analyze1553B.UI/MainWindow.xaml
@@ -1,13 +1,13 @@
 ﻿<mah:MetroWindow  
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
-        x:Class="Medusa.Analyze1553B.UI.MainWindow"
+        x:Class="Program.ByteSumCountingProgram.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Medusa.Analyze1553B.UI"
+        xmlns:local="clr-namespace:Program.ByteSumCountingProgram.UI"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:vm="clr-namespace:Medusa.Analyze1553B.VM;assembly=Medusa.Analyze1553B.VM" 
+        xmlns:vm="clr-namespace:Program.ByteSumCountingProgram.VM;assembly=Medusa.Analyze1553B.VM" 
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 
         
         mc:Ignorable="d"
