--- a/Medusa.Analyze1553B.UI/Views/ChoosePageView.xaml
+++ b/Medusa.Analyze1553B.UI/Views/ChoosePageView.xaml
@@ -1,11 +1,11 @@
 ﻿<mah:MetroWindow  
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-             x:Class="Medusa.Analyze1553B.UI.Views.ChoosePageView"
+             x:Class="Program.ByteSumCountingProgram.UI.Views.ChoosePageView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Medusa.Analyze1553B.UI.Views" 
+             xmlns:local="clr-namespace:Program.ByteSumCountingProgram.UI.Views" 
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="650" d:DesignWidth="900"
