--- a/Medusa.Analyze1553B.UI/MainWindow.xaml
+++ b/Medusa.Analyze1553B.UI/MainWindow.xaml
@@ -7,71 +7,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Program.ByteSumCountingProgram.UI"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:vm="clr-namespace:Program.ByteSumCountingProgram.VM;assembly=Medusa.Analyze1553B.VM" 
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" 
-        
         mc:Ignorable="d"
         x:Name="MainWindowName"
         Title="{Binding Title}" 
-        Width="1280" Height="1024" 
-        MinWidth="1280" MinHeight="1024" 
-        WindowState="Maximized">
+        MinWidth="620" Width="620" 
+        MinHeight="1024" Height="1024" 
+        WindowState="Normal">
     <mah:MetroWindow.Resources>
 
-        
-
-        <Style TargetType="{x:Type local:TabControlEx}" BasedOn="{StaticResource MahApps.Styles.TabControl}">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type TabControl}">
-                        <Grid Background="{TemplateBinding Background}" ClipToBounds="True" 
-                              KeyboardNavigation.TabNavigation="Local" SnapsToDevicePixels="True">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition x:Name="ColumnDefinition0" />
-                                <ColumnDefinition x:Name="ColumnDefinition1" Width="0" />
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition x:Name="RowDefinition0" Height="Auto" />
-                                <RowDefinition x:Name="RowDefinition1" Height="*" />
-                            </Grid.RowDefinitions>
-                            <DockPanel Margin="2,2,0,0" LastChildFill="False">
-                                <TabPanel x:Name="HeaderPanel" Margin="0,0,0,-1" 
-                                          VerticalAlignment="Bottom" Panel.ZIndex="1" 
-                                          DockPanel.Dock="Left" IsItemsHost="True"
-                                          KeyboardNavigation.TabIndex="1" />
-                            </DockPanel>
-                            <Border x:Name="ContentPanel" Grid.Row="1" Grid.Column="0"
-                            Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            KeyboardNavigation.DirectionalNavigation="Contained" 
-                            KeyboardNavigation.TabIndex="2" KeyboardNavigation.TabNavigation="Local">
-                                <Grid x:Name="PART_ItemsHolder" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                            </Border>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-        <Style x:Key="CloseButtonStyle" TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
-           
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Margin" Value="5,0,5,0"/>
-            <Setter Property="FontSize" Value="16"/>
-        </Style>
     </mah:MetroWindow.Resources>
+
     <mah:MetroWindow.LeftWindowCommands>
         <mah:WindowCommands>
-            <Button Click="LaunchGitHubSite" ToolTip="Open up the GitHub site">
-                <iconPacks:PackIconModern Width="22"
-                                  Height="22"
-                                  Kind="Book" />
-            </Button>
             <Menu Margin="10,0,10,0">
                 <MenuItem Header="File">
-                    <MenuItem Header="New project" Command="{Binding Commands.CreateManagerOfViewModelsCommand}"/>
-                    <MenuItem Header="Open" Command="{Binding Commands.GetDataFromFileCommand}"/>
+                    <MenuItem Header="Open folder" Command="{Binding Commands.OpenFolderCommand}"  InputGestureText="Ctrl+N" />
+                    <MenuItem Header="Open" Command="{Binding Commands.OpenFolderCommand}"  InputGestureText="Ctrl+O" />
                     <MenuItem Header="Save"/>
                     <MenuItem Header="Save All"/>
                 </MenuItem>
@@ -83,166 +35,43 @@
         </mah:WindowCommands>
     </mah:MetroWindow.LeftWindowCommands>
 
-    <mah:MetroWindow.RightWindowCommands>
-        <mah:WindowCommands>
-            <Button Click="GetHelpClick" Content="Get help">
-                <Button.ContentTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <iconPacks:PackIconModern Width="22"
-                                        Height="22"
-                                        VerticalAlignment="Center"
-                                        Kind="BookPerspectiveHelp" />
-                            <TextBlock Margin="4 0 0 0"
-                                       VerticalAlignment="Center"
-                                       Text="{Binding}" />
-                        </StackPanel>
-                    </DataTemplate>
-                </Button.ContentTemplate>
-            </Button>
-
-        </mah:WindowCommands>
-    </mah:MetroWindow.RightWindowCommands>
-
     <Grid>
+        
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
             <RowDefinition Height="*"/>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="0.1*"/>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="0.15*"/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="Auto" />
-
-            </Grid.ColumnDefinitions>
-            <ToolBarTray IsLocked="True">
-                <ToolBar>
-                    <Button>
-                        <iconPacks:PackIconModern
-                                  Kind="Undo"/>
-                    </Button>
-                    <Button>
-                        <iconPacks:PackIconModern
-                                  Kind="Redo"/>
-                    </Button>
-                    <Button>
-                        <iconPacks:PackIconModern
-                                  Kind="ControlPlay"/>
-                    </Button>
-                </ToolBar>
-            </ToolBarTray>
-
-        </Grid>
-        
-        <local:TabControlEx x:Name="ViewModelTabControl"
-                            Grid.Row="1" Grid.ColumnSpan="3"
-                            Margin="0,0,-3,-3"
-                            ItemsSource="{Binding ViewModels}"
-                            SelectedItem="{Binding SelectedViewModel}">
-
-
-            <TabControl.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name, NotifyOnTargetUpdated = True}" />
-                        <Button Style="{StaticResource CloseButtonStyle}"
-                                Content="X"
-                                Command="{Binding Commands.CloseSomethingCommand}" 
-                                CommandParameter="{Binding}"/>
-                    </StackPanel>
-                </DataTemplate>
-            </TabControl.ItemTemplate>
-
-            <TabControl.ContentTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="0.15*"/>
-                        </Grid.ColumnDefinitions>
-
-                        <local:TabControlEx x:Name="ItemsCurrentViewModelTabControl"
-                                            ItemsSource="{Binding Items}"
-                                            SelectedItem="{Binding SelectedItem}">
-                            
-                            <TabControl.ItemTemplate>
-                                <DataTemplate>
-                                    <StackPanel Orientation="Horizontal" >
-                                        <TextBlock Text="{Binding Name}"/>
-                                        <Button Style="{StaticResource CloseButtonStyle}"
-                                                Content="X"
-                                                Command="{Binding RelativeSource={RelativeSource FindAncestor, 
-                                                                  AncestorType={x:Type mah:MetroWindow}},
-                                                                  Path=DataContext.Commands.CloseSomethingCommand}"
-                                                CommandParameter="{Binding}"/>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </TabControl.ItemTemplate>
-                            
-                            <TabControl.ContentTemplate>
-                                <DataTemplate>
-                                    <Grid x:Name="GridForItems" Loaded="MainModelsDataGrid_Loaded"/>
-                                </DataTemplate>
-                            </TabControl.ContentTemplate>
-                        </local:TabControlEx>
-                        
-                        <GridSplitter Grid.Row="1" Grid.Column="1"
-                                      Width="5"
-                                      Background="Gray"/>
-                        <TreeView x:Name="ViewModelTreeView"
-                                  ItemsSource="{Binding Nodes}"
-                                  Grid.Column="2">
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="PreviewMouseLeftButtonUp">
-                                    <i:InvokeCommandAction  Command="{Binding Commands.AddItemCommand}"
-                                            CommandParameter="{Binding SelectedItem,
-                                                                       ElementName = ViewModelTreeView}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-
+        <TreeView  x:Name="ViewModelTreeView"
+                   ItemsSource="{Binding SelectedViewModel.Nodes}"
+                   Grid.Row="1" Grid.Column="0">
+            <TreeView.ItemTemplate>
+                <HierarchicalDataTemplate ItemsSource="{Binding Path=Nodes}">
+                    <StackPanel>
+                        <TextBlock Text="{Binding Name}"/>
+                        <TreeView ItemsSource="{Binding Files}">
                             <TreeView.ItemTemplate>
-                                <HierarchicalDataTemplate ItemsSource="{Binding Path=Nodes}">
-                                    <TextBlock Text="{Binding Name}"/>
+                                <HierarchicalDataTemplate>
+                                    <StackPanel>
+                                        <StackPanel.Resources>
+                                            <Style TargetType="TextBlock" BasedOn="{StaticResource MahApps.Styles.TextBlock}">
+                                                <Setter Property="Foreground" Value="Gray" />
+                                            </Style>
+                                        </StackPanel.Resources>
+
+                                        <TextBlock Text="{Binding FileName}"/>
+                                    </StackPanel>
+
                                 </HierarchicalDataTemplate>
                             </TreeView.ItemTemplate>
-                            
                         </TreeView>
-                    </Grid>
-                </DataTemplate>
-            </TabControl.ContentTemplate>
-
-        </local:TabControlEx>
-
-        <GridSplitter Grid.Row="2" Grid.ColumnSpan="3"
-                      Height="5"
-                      Background="Gray"/>
-
-        <Border Grid.Row="3" Grid.Column="0">
-            <TextBlock Text="Панель навигации" FontSize="30"
-                       HorizontalAlignment="Center" VerticalAlignment="Center"
-                       TextWrapping="Wrap"/>
-        </Border>
-
-        <GridSplitter Grid.Row="4" Grid.ColumnSpan="3"
-                      Height="5"
-                      Background="Gray"/>
-
-        <Border Grid.Row="5" Grid.Column="0">
-            <TextBlock Text="Окно ошибок" FontSize="30"
-                       HorizontalAlignment="Center" VerticalAlignment="Center"
-                       TextWrapping="Wrap"/>
-        </Border>
-
+                    </StackPanel>
+                   
+                </HierarchicalDataTemplate>
+            </TreeView.ItemTemplate>
+        </TreeView>
     </Grid>
 </mah:MetroWindow>
